<resources>
    <string name="app_name">Workout Log</string>
    <string name="enter_email">Enter Email</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="sing_up">Sing_up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="SignUp">Don\'t have an Account Signup</string>
    <string name="Login">SignUp</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="first_name">First name</string>
    <string name="lastname">LastName</string>
    <string name="sign_up">Sign Up</string>
    <string name="LogIn">LOgIn</string>
    <string name="plan">plan</string>
    <string name="trck">trck</string>
    <string name="profile">profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>